--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <header>
     <svg
@@ -27,32 +31,65 @@
       "
     >
       <path
-        fill="#ffbd69"
+        fill="#ffffff"
         fill-opacity="1"
         d="M0,96L30,117.3C60,139,120,181,180,181.3C240,181,300,139,360,133.3C420,128,480,160,540,149.3C600,139,660,85,720,96C780,107,840,181,900,186.7C960,192,1020,128,1080,117.3C1140,107,1200,149,1260,165.3C1320,181,1380,171,1410,165.3L1440,160L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"
       ></path>
     </svg>
 
     <div class="top-bar">
-      <h1>Stephanie Thornley</h1>
+      <div class="box">
+        <h1 class="name">
+          Stephanie Thornley
+        </h1>
+
+        <div class="sun">
+          <div class="rays">
+            <div class="ray-vertical ray-1"></div>
+            <div class="ray-horizontal ray-2"></div>
+            <div class="ray-vertical ray-3"></div>
+            <div class="ray-horizontal ray-4"></div>
+            <div class="ray-diagonal ray-5"></div>
+            <div class="ray-diagonal ray-6"></div>
+            <div class="ray-diagonal ray-7"></div>
+            <div class="ray-diagonal ray-8"></div>
+            <div class="ray-diagonal ray-9"></div>
+            <div class="ray-diagonal ray-10"></div>
+            <div class="ray-diagonal ray-11"></div>
+            <div class="ray-diagonal ray-12"></div>
+          </div>
+
+          <div class="circle">
+            <div class="eye">
+              <div class="gleam">
+              <div class="eye"><div class="gleam"></div></div>
+
+              <div class="mouth"><div class="top-mouth"></div></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <nav>
-        <a href="#about">About</a>
-        <a href="#skills">Skills and Experience</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#about">ABOUT</a>
+        <a href="#skills">SKILLS AND EXPERIENCE</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
       </nav>
     </div>
   </header>
 
   <body>
     <div class="about">
-      <div class="profile-image">
+      <div class="stephanie">
         <img
-          src="./Stephanie-1.jpg"
+          class="photo"
+          src="./circle-cropped.png"
           alt="Stephanie sporting a cheesy grin"
           width="200"
         />
       </div>
+
       <h2>
         Hi! I'm Stephanie, a Junior Software Developer based in Leeds
       </h2>
@@ -66,13 +103,16 @@
         eleifend quam.
       </p>
     </div>
-    <div id="skills" class="skills">
+    <div class="line"></div>
+    <div id="skills" class="section">
       <h3>Skills and Experience</h3>
     </div>
-    <div id="projects" class="projects">
+    <div class="line"></div>
+    <div id="projects" class="section">
       <h4>Projects</h4>
     </div>
-    <div id="contact" class="contact">
+    <div class="line"></div>
+    <div id="contact" class="section">
       <h4>Contact</h4>
     </div>
   </body>
