Write 'About Me', implement grid on 'Skills and Experience'

--- a/index.html
+++ b/index.html
@@ -59,13 +59,9 @@
         <div id="about" class="about">
         <h1> < Stephanie Thornley /> </h1>
           <p class="blurb">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis
-            tortor eu ligula mollis sodales. Phasellus porta eget augue id
-            egestas. Morbi cursus nec velit sit amet ornare. Duis luctus odio in
-            sapien consectetur aliquet. Proin placerat lacus sed massa pharetra
-            aliquet. Aliquam sit amet justo diam. Maecenas in ipsum aliquet,
-            congue justo id, eleifend quam.<br><br>
-            
+            Hello! I'm Stephanie, a hopeful Junior Software Developer from Leeds. I've gone from History grad to coding bootcamp grad, which seems like a big change, but they're not too different - both require logical thinking and an ability to appreciate the smaller details as well as the bigger picture.
+            I love the process of coding (even debugging!), but I also enjoy learning about the history of tech and how advancements in tech are affected by society. If I'm not doing these things, I'm probably having a go at a new recipe or exploring new places. 
+            <br><br>
             <b>Full Stack JavaScript Bootcamp, Northcoders</b><br>
             March 2020 - June 2020<br>
             <b>BA (Hons) History, University of Leeds</b><br> 
@@ -77,35 +73,61 @@
         </div>
         <div id="skills" class="section">
           <h2>Skills and Experience</h2>
-          <p>
-            Technical skills:
-            <ul><b>
-              <li>JavaScript</li>
-              <li>React</li>
-              <li>React Native</li>
-              <li>PostgresSQL</li>
-              <li>Express</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>jQuery</li>
-              <li>Node.js</li>
-              <li>Git</li></b>
-            </ul>
+          <div class="skills-and-exp">
+            <div>
+            <p class="tech-skills"> 
+              Technical skills:
+              <ul><b>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>React Native</li>
+                <li>PostgresSQL</li>
+                <li>Express</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>jQuery</li>
+                <li>Node.js</li>
+                <li>Git</li>
+                <li>TDD</li></b>
+              </ul>
+            </p>
+            </div>
 
-            Experience:
-            <ul>
-              <li><b>Full Stack Coding Bootcamp, Northcoders</b></li>
-              <li><b>Executive, The Prince's Trust</b></li> 
-              <li><b>Outdoor Food and Beverage Vendor, Walt Disney World Florida</b></li>
-            </ul>
+            <div>
+            <p class="non-tech-skills">
+              Non-technical skils:
+              <ul><b>
+                <li>Independent learning and research</li>
+                <li>Communication</li>
+                <li>Critical thinking</li>
+                <li>Self-motivation and positivity</li>
+              </b></ul>
+            </p>
+            </div>
 
-            Volunteer work:
-            <ul>
-              <li><b>Volunteer, Lighthouse Futures Trust</b></li>
-              <li><b>Team Mate, Over The Wall</b></li>
-              <li><b>Secretary, Guide Dogs Society @ Leeds University Union</b></li>
-            </ul>
-          </p>
+            <div>
+            <p class="experience">
+              Experience:
+              <ul>
+                <li><b>Full Stack Coding Bootcamp, Northcoders</b></li>
+                <li><b>Executive, The Prince's Trust</b></li> 
+                <li><b>Outdoor Food and Beverage Vendor, Walt Disney World Florida</b></li>
+              </ul>
+            </p>
+            </div>
+
+            <div>
+            <p class="volunteer">
+              Volunteer work:
+              <ul>
+                <li><b>Volunteer, Lighthouse Futures Trust</b></li>
+                <li><b>Team Mate, Over The Wall</b></li>
+                <li><b>Secretary, Guide Dogs Society at Leeds University Union</b></li>
+              </ul>
+            </p>
+            </div>
+            
+          </div>
           <div class="line"></div>
         </div>
 
