--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         });
 
          $(".accordion").each(function () {
+           
           // shows/hides content when click heading
            $(this).click(function() {
             // console.log($(this).attr("aria-expanded"), $(this)[0].innerText);
@@ -100,10 +101,9 @@
           <h2>Skills and Experience</h2>
           <div>
             <section>
-            <div>
             <button aria-expanded="false" aria-controls="tech-skills" class="accordion" id="tech-skills-heading">
               <h3> Technical skills</h3></button>
-              <ul id="tech-skills" role="region" aria-labeledby="tech-skills-heading" class="accordion info">
+              <ul id="tech-skills" role="region" aria-labeledby="tech-skills-heading" class="accordion info tech-skills">
                 <li><b>Languages</b><br> JavaScript, HTML/HTML5, CSS/CSS3</li><br>
                   <li><b>Frameworks and libraries</b><br>
                     React, React Native, jQuery, Node.js, Express, Jest</li><br>
@@ -111,14 +111,13 @@
                   PostgresSQL</li><br>
                 <li><b>Tools and processes</b><br>
                   Git, TDD, semantic markup, accessibility, agile development</li>
-                  </div>
+              </ul>  
             </section>
 
             <section>
-              <div>
             <button aria-expanded="false" aria-controls="non-tech-skills" class="accordion" id="non-tech-skills-button">
               <h3> Non-technical skills</h3></button>
-              <ul id="non-tech-skills" role="region" aria-labeledby="tech-skills-button" class="accordion info">
+              <ul id="non-tech-skills" role="region" aria-labeledby="tech-skills-button" class="accordion info ">
                 <li>Disability support in partial sightedness and Autism Spectrum Condition</li>
                 <li>Mental health awareness and support</li>
                 <li>Cultural awareness and sensitivity</li>
@@ -127,15 +126,13 @@
                 <li>Critical thinking</li>
                 <li>Self-motivation and positivity</li>
               </ul>
-              </div>
             </section>
 
             <section>
-              <div>
-              <button aria-expanded="false" aria-controls="non-tech-experience" class="accordion" id="non-tech-experience-button">
+              <button aria-expanded="false" aria-controls="non-tech-experience" class="accordion non-tech-experience" id="non-tech-experience-button">
                 <h3> Experience</h3> 
               </button>
-              <ul id="non-tech-experience" role="region" aria-labeledby="non-tech-experience-button" class="accordion info">
+              <ul id="non-tech-experience" role="region" aria-labeledby="non-tech-experience-button" class="accordion info experience">
                 <li><b>Full Stack Coding Bootcamp, Northcoders</b>
                   <ul>
                     <li>3 month intensive JavaScript coding bootcamp delivered remotely due to lockdown</li>
@@ -149,7 +146,8 @@
                   <li>Building young people's skills and motivation, helping them to gain confidence and find employment</li>
                   <li>Working with young people from a range of social and cultural backgrounds, in a variety of settings</li>
                   <li>Outreach and recruitment, delivering life skills sessions, liaising with external partners, risk assessments and safeguarding, providing emotional support to young people</li>
-                  <h4>Volunteer work</h4>
+                </ul>
+                <h4>Volunteer work</h4>
                   <li><b>Chaperone, Lighthouse Futures Trust</b>
                     <ul>
                       <li>Chaperoned Connections Club events for young people with an autism spectrum condition to socialise with others
@@ -179,7 +177,6 @@
                 </ul>
                 </li> 
               </ul>
-              </div>
             </section>
 
            
