Add gradient footer

--- a/index.html
+++ b/index.html
@@ -282,6 +282,11 @@
         <div id="contact" class="section contact">
         <section>
           <h2>Contact</h2>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          
           <p>Twitter GitHub LinkedIn Dev.to Email Contact form</p>
         <embed><a class="twitter-timeline" data-width="250" data-height="300" data-theme="dark"
           href="https://twitter.com/stephaniethorns?ref_src=twsrc%5Etfw">Tweets by stephaniethorns</a>
@@ -290,7 +295,10 @@
         </div>
         </div>
     </div>
-  
+  <footer>
+    <p><b>Stephanie Thornley, 2020</b><br>
+      Site built using HTML, CSS and jQuery - click here for source code</p>
+  </footer>
   </body>
   </main>
 </html>
