--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
           $(".blurb").slideDown(1000)  
         }
       );
+  
+
         /* Every time the window is scrolled ... */
         $(window).scroll(function () {
           /* Check the location of each 'section'. If it is more than 1/5th of the screen height from the bottom of the screen, fade in */
@@ -26,11 +28,23 @@
           let appearAfterScroll = $(window).height() / 5;
           let navFocus = $(window).height() / 2;
           
-          $(".section").each(function () {
+          $(".section").each(function (count) {
             if (($(this).position().top + appearAfterScroll) < screenBottom[0]) {
                $(this).animate({ opacity: 1 }, 1000);
-            
+               if (($(this).attr("id")) === "contact" && $(this).css("opacity") === "0") {
+                $(this).find("span")
+                   .animate(
+                     { top: -10 }, "slow"
+                   )
+                   .animate(
+                     { top: 30 }, 
+                   )
+                    .animate(
+                    { top: 10 }, "slow",
+                  )
+               }
             }
+
             /* Shows underline only on nav link in nav bar corresponding to the section screen is on */
             let focusedSection = "." + $(this).attr("id");
             let focusedSectionClass = ".nav-" + $(this).attr("id");
