--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stephanie Thornley's Portfolio Site</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./src/index.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Asap&display=swap"
@@ -114,7 +114,7 @@
         <div class="nav-section">
           <img
             class="photo"
-            src="./assets/circle-cropped.png"
+            src="../src/assets/circle-cropped.png"
             alt="Stephanie sporting a cheesy grin"
             width="200"
           />
@@ -316,6 +316,7 @@
     <p><b>Stephanie Thornley, 2020</b><br>
       Site built using HTML, CSS and jQuery - click here for source code</p>
   </footer>
+  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
   </main>
 </html>
