--- a/index.html
+++ b/index.html
@@ -305,24 +305,32 @@
         <div id="contact" class="section contact">
         <section>
           <h2>Contact</h2>
+          <div class="social-logos">
           <img src="./assets/SVGs/dev.to-logo.svg" class="logo" alt="DEV logo">
           <img src="./assets/SVGs/github-logo.svg" class="logo" alt="GitHub logo">
           <img src="./assets/SVGs/twitter-logo.svg" class="logo" alt="Twitter logo">
           <img src="./assets/SVGs/linkedin-logo.svg" class="logo" alt="LinkedIn logo">
-        <br><br><br>
+          </div>
 
-        <form name="contact" method="POST" data-netlify="true">
+        <form name="contact" method="POST" data-netlify="true" class="card">
+          <h3 class="contact-form-heading">Get in touch!</h3>
           <p>
-            <label>Name: <input type="text" name="name" /></label>
+            <div id="float-container" class="float-container">
+            <label for="name">Name </label><input type="text" name="name" id="name">
+            </div>
           </p>
           <p>
-            <label>Email: <input type="email" name="email" /></label>
+              <div id="float-container" class="float-container">
+            <label for="email">Email </label><input type="email" name="email" id="email" />
+            </div>
           </p>
           <p>
-            <label>Message: <textarea name="message"></textarea></label>
+            <div id="float-container" class="float-container">
+            <label for="message" class="message">Message</label> <textarea name="message" id="message" maxlength="600"></textarea>
+            </div>
           </p>
           <p>
-            <button type="submit">Send</button>
+            <button type="submit" >Send</button>
           </p>
         </form>
         <embed><a class="twitter-timeline" data-width="250" data-height="300" data-theme="dark"
